[gd_scene load_steps=9 format=3 uid="uid://dt2b2acdq52cw"]

[ext_resource type="Script" path="res://scenes/levels/common/button.gd" id="1_lkfdi"]
[ext_resource type="PackedScene" uid="uid://cet7e7nga4sxb" path="res://scenes/levels/common/buttons_and_lasers/Button.blend" id="2_vjavu"]
[ext_resource type="AudioStream" uid="uid://c1j1fgo5wdcvw" path="res://assets/sounds/no-access-243463.mp3" id="3_73fh8"]
[ext_resource type="AudioStream" uid="uid://ctn6ndkmulqy8" path="res://assets/sounds/access-21-299881.mp3" id="4_y44b7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ghktl"]
height = 0.258398
radius = 0.50702

[sub_resource type="Animation" id="Animation_qv4we"]
resource_name = "Press"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button/ButtonSwitch:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(3.20624e-08, 0, 0), Vector3(4.30135e-08, 0, -0.125267), Vector3(3.20624e-08, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1.20493e-08, -8.18701e-09, -0.0494687), Vector3(1.20493e-08, -8.18701e-09, 0.0757978), Vector3(1.20493e-08, -8.18701e-09, -0.0494687)]
}

[sub_resource type="Animation" id="Animation_mthx4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button/ButtonSwitch:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(3.20624e-08, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.20493e-08, -8.18701e-09, -0.0494687)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e44qy"]
_data = {
"Press": SubResource("Animation_qv4we"),
"RESET": SubResource("Animation_mthx4")
}

[node name="Button" type="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.140304)
collision_layer = 5
script = ExtResource("1_lkfdi")
color = Color(0.862745, 0.0392157, 0.0392157, 1)

[node name="Button" parent="." instance=ExtResource("2_vjavu")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.20493e-08, 0, 0.137828)

[node name="ButtonSwitch" parent="Button" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.20624e-08, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.885238, 0, 0, 0, -3.8695e-08, 0.885238, 0, -0.885238, -3.8695e-08, 1.20493e-08, -8.18701e-09, -0.0494687)
shape = SubResource("CylinderShape3D_ghktl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e44qy")
}

[node name="Sounds" type="Node3D" parent="."]

[node name="NoAccessSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_73fh8")
volume_db = -12.0
max_polyphony = 10

[node name="AccessSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_y44b7")
volume_db = -13.0
max_polyphony = 10

[editable path="Button"]
